fix grid overflow

--- a/css/style.css
+++ b/css/style.css
@@ -273,7 +273,8 @@ h3 {
   grid-template-rows: 1fr 1fr 1fr;
   column-gap: 32px;
   row-gap: 32px;
-  height: 500px;
+  min-width: 0;
+  min-height: 0;
   margin: 0 32px 32px 32px;
 }
 .populaire-title {
